tests/fail/conflicting_short.stderr
error: `no_short` and `short` are conflicting attributes
 --> $DIR/conflicting_short.rs:8:9
  |
8 |     pub value: bool,
  |         ^^^^^
